pxc/tests/test_031_thrattr/nots.px

public namespace nots;
import core::common -;

pure tsvaluetype struct bar {
  public int z;
}

pure tsvaluetype struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  varray{bar} bv; // error: not pure tsvaluetype
  tiptr{bar} bp = make_tiptr{bar}(bx);
  public function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

